force-app/main/default/objects/Freight_Container__c/Freight_Container__c.object-meta.xml
<CustomObject>
    <description>Equipment owners point of view.</description>
    <label>Freight Container</label>
    <nameField>
        <label>Freight Container Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Freight Containers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>