force-app/main/default/objects/Freight_Container__c/fields/Container_owner_Line__c.field-meta.xml
<CustomField>
    <fullName>Container_owner_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Container owner (Line)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Freight Containers</relationshipLabel>
    <relationshipName>Freight_Containers</relationshipName>
    <type>Lookup</type>
</CustomField>