force-app/main/default/objects/Freight_Container__c/fields/Current_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Current_Checklist__c</fullName>
    <label>Current Checklist</label>
    <referenceTo>Packing_checklist__c</referenceTo>
    <relationshipLabel>Freight Containers</relationshipLabel>
    <relationshipName>Freight_Containers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>