force-app/main/default/objects/Freight_Container__c/fields/Current_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Current_Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Shipment</label>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipLabel>Freight Containers</relationshipLabel>
    <relationshipName>Freight_Containers</relationshipName>
    <type>Lookup</type>
</CustomField>