force-app/main/default/objects/Freight_Container__c/fields/Shipments_summary__c.field-meta.xml
<CustomField>
    <fullName>Shipments_summary__c</fullName>
    <label>Shipments summary</label>
    <summaryForeignKey>Shipment__c.Freight_Container__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>