force-app/main/default/objects/Freight_Container__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20-foot standard</fullName>
                <default>true</default>
                <label>20-foot standard</label>
            </value>
            <value>
                <fullName>40-foot standard</fullName>
            </value>
            <value>
                <fullName>40-foot high cube</fullName>
            </value>
            <value>
                <fullName>Another</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>